docs/handbook/server/k8s/1.5.2/master/yaml/kubernetes/ingress-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: ingress-ds
  labels:
    app: ingress
spec:
  template:
    metadata:
      labels:
        name: ingress-ds
        app: ingress
    spec:
      containers:
      - name: echoserver
        image: r.8ops.cc/kubeguide/echoserver:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          hostPort: 8080
      imagePullSecrets:
      - name: registrykey
